--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
         </div>
         <header class="topbar">
+            <div class="sticky">
+
+            </div>
             <div class="background_tb">
                 <div class="search">
                     <button class="search_button">
@@ -36,7 +39,7 @@
                     <button class="avatar"></button>
                 </div>
             </div>
-            
+
         </header>
         <div class="sidebar">
             <div class="background_sb">
