--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="./scripts/static.js"></script>
     <title>StudyFree</title>
 </head>
 
@@ -16,9 +18,12 @@
 
 
         </div>
-        <header class="topbar">
+        <div class="topbar">
+
             <div class="background_tb">
+
                 <div class="search">
+                    <button class="add_AD"></button>
                     <button class="search_button">
                         <img src="./img/search_icon.png">
                     </button>
@@ -36,19 +41,20 @@
                     <button class="avatar"></button>
                 </div>
             </div>
-            
-        </header>
-        <div class="sidebar">
+
+        </div>
+        <div id="12345" class="sidebar">
             <div class="background_sb">
-                <div class="logo"></div>
-                
+                <img src="/img/img_logo.png" class="logo">
+
             </div>
             <div class="effect_sb"></div>
         </div>
         <div class="footer">
-             <img id="lofofooter" src="./img/logo_futer.png" alt="">
+            <img id="logofooter" src="./img/logo_futer.png" alt="logo StudyFree">
         </div>
     </div>
+
 
 </body>
 
