прописаны  НОРМАЛЬНЫЕ пути к картинкам

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <div class="search">
                     <button class="add_AD text">
                         Добавить объявление
-                        <img src="/img/add_advert.png" class="ad_advert_img">
+                        <img src="./img/add_advert.png" class="ad_advert_img">
                     </button>
                     <button class="search_button">
-                        <img src="/img/search_icon.png">
+                        <img src="./img/search_icon.png">
                     </button>
                     <input class="search_line">
                 </div>
@@ -46,10 +46,10 @@
                 <div class="profilebar">
                     <div class="block_message">
                         <button class="message_but">
-                            <img src="/img/mail_icon.png" class="mail_icon">
+                            <img src="./img/mail_icon.png" class="mail_icon">
                         </button>
                         <button class="bell_but">
-                            <img src="/img/bell_icon.png" class="bell_icon">
+                            <img src="./img/bell_icon.png" class="bell_icon">
                         </button>
                     </div>
                     <button class="avatar"></button>
@@ -58,7 +58,7 @@
                 <!-- NO auth-->
                 <button class="but_sign_in text">
                     Войти
-                    <img src="/img/IconSignIn.png" alt="" class="ad_advert_img">
+                    <img src="./img/IconSignIn.png" alt="" class="ad_advert_img">
                 </button>
                 <!-- NO auth END-->
             </div>
@@ -70,7 +70,7 @@
             <div class="background_sb">
                 <div class="effect_sb"></div>
 
-                <img src="/img/white_logo.png" class="logo">
+                <img src="./img/white_logo.png" class="logo">
 
                 <ul class="menu_sb">
 
@@ -86,7 +86,7 @@
         <!--Sidebar End-->
         <!--Footer Start-->
         <div class="footer">
-            <img id="logofooter" src="/img/logo_futer.png" alt="logo StudyFree">
+            <img id="logofooter" src="./img/logo_futer.png" alt="logo StudyFree">
         </div>
         <!--Footer End-->
     </div>
